# mathlibf

./: .gitignore  CMakeLists.txt  README.md  build.sh
core/: CMakeLists.txt  core.c  core.h  test_core.c
draft/: cont.MD  eq.MD  latex_cheatsheet.MD
geometry/: CMakeLists.txt  geometry.c  geometry.h  test_geometry.c
